syntax = "proto3";

option java_multiple_files = true;

package guessing_game;


service GuessingGame { // service ran on the server
  rpc reply (Guess) returns (Feedback) {}
  rpc tell_name (Name) returns (Name) {}
  rpc check_state(Name) returns (GameState) {}
  rpc make_move(Name) returns (GameState) {}
  rpc update_state(Name) returns (GameState) {}
  rpc update_board(move) returns (GameState) {}
  rpc print_board(Name) returns (GameState) {}
}

message GameState { 
	string state = 1;
}
message row{
	repeated string item = 1;
}
message board {
	repeated row board_row = 1;
}

message move{
    string move = 1;
}

message acknowledge{
	string state = 1; // on, won, over
	bool moving = 2; // yes, no
	bool legal = 3; // yes, no
	bool moved = 4; // yes, no if the piece actually moved
	string check = 5; // no, or position of checking
	string location = 6; // last location of piece
	string new_location = 7; // new location of piece
	bool kill = 8; // stop the node if kill is true (dead piece)
	string color = 9; // color of your piece
	// add more when needed 
}

message Guess {
  int32 guess = 1;
}

message Feedback{
	string feed = 1;

}

message Name {
  string name = 1;
}

